# ttrpg-session-transcriber

./: .gitignore  00_README.md  01_Как_пользоваться.md  02_Статус_и_заметки.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEATURE_REQUESTS.md  LICENSE  README.md  README.ru.md  SECURITY.md  TASKS.md  build.spec  install.bat  pyproject.toml  pytest.ini  requirements-qt.txt  run.bat  speaker_map.json
.github/: PULL_REQUEST_TEMPLATE.md
core/: __init__.py  asr.py  backend_installers.py  cache.py  chunking.py  discovery.py  file_matchers.py  fvtt_helpers.py  gpu_check.py  onboarding_state.py  peaks.py  pipeline.py  recent_sessions.py  speaker_map.py  timeline_window.py  ui_contract.py  ui_registry.py
docs/: architecture-review-2026-06.md
domain/: __init__.py  annotations.py  events.py  speaker_map.py  timeline.py
launcher/: bootstrap.py  build.spec  install_logic.py  installer_ui.py  uninstall_logic.py  uninstaller_ui.py  version.py
licenses/: LGPL-NOTICE.txt
mergers/: __init__.py  base.py  script_merger.py
prompts/: 01_raw_to_transcript.md  02_transcript_to_journal.md
renderers/: __init__.py  base.py  plain_text.py
scripts/: 00_README.md  _capture_ui_screens.py  _walkthrough_ui.py  capture_qml_screens.py  chunk_text.py  download_gigaam.py  dump_qml_geometry.py  gen_baseline_newpipeline.py  gen_fixtures_noprint.py  generate_e2e_fixtures.py  install_whisperx_windows.ps1  merge_whisperx.py  parse_fvtt_chat.py  parse_fvtt_combat.py  run_whisperx_gui.bat  wisper_launcher.py
sources/: __init__.py  base.py
tests/: __init__.py  conftest.py  test_asr_worker_multi_segment.py  test_build_spec.py  test_chunking.py  test_core_asr.py  test_core_chunking_options.py  test_domain.py  (+26 more)
(+167 files in other folders)
